--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,6 +37,7 @@ file.reference.javax.mail-api-1.5.6.jar=web/WEB-INF/lib/javax.mail-api-1.5.6.jar
 file.reference.log4j-api-2.7.jar=web/WEB-INF/lib/log4j-api-2.7.jar
 file.reference.log4j-core-2.7.jar=web/WEB-INF/lib/log4j-core-2.7.jar
 file.reference.log4j-web-2.7.jar=web/WEB-INF/lib/log4j-web-2.7.jar
+file.reference.mail.jar=web/WEB-INF/lib/mail.jar
 file.reference.poi-3.14-20160307.jar=web/WEB-INF/lib/poi-3.14-20160307.jar
 file.reference.primefaces-6.0.jar=web/WEB-INF/lib/primefaces-6.0.jar
 includes=**
@@ -62,7 +63,8 @@ javac.classpath=\
     ${file.reference.commons-io-2.5.jar}:\
     ${file.reference.itext-2.1.7.jar}:\
     ${file.reference.javax.mail-api-1.5.6.jar}:\
-    ${file.reference.poi-3.14-20160307.jar}
+    ${file.reference.poi-3.14-20160307.jar}:\
+    ${file.reference.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
