--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=true
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-auxiliary.org-netbeans-modules-projectapi.jsf_2e_language=JSP
+auxiliary.org-netbeans-modules-projectapi.jsf_2e_language=Facelets
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
 build.dir=build
@@ -38,6 +38,7 @@ file.reference.log4j-api-2.7.jar=web/WEB-INF/lib/log4j-api-2.7.jar
 file.reference.log4j-core-2.7.jar=web/WEB-INF/lib/log4j-core-2.7.jar
 file.reference.log4j-web-2.7.jar=web/WEB-INF/lib/log4j-web-2.7.jar
 file.reference.mail.jar=web/WEB-INF/lib/mail.jar
+file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Users\\Jotamarios\\Desktop\\Install\\Librerias\\mysql-connector-java-5.1.23-bin.jar
 file.reference.poi-3.14-20160307.jar=web/WEB-INF/lib/poi-3.14-20160307.jar
 file.reference.primefaces-6.0.jar=web/WEB-INF/lib/primefaces-6.0.jar
 includes=**
@@ -64,7 +65,8 @@ javac.classpath=\
     ${file.reference.itext-2.1.7.jar}:\
     ${file.reference.javax.mail-api-1.5.6.jar}:\
     ${file.reference.poi-3.14-20160307.jar}:\
-    ${file.reference.mail.jar}
+    ${file.reference.mail.jar}:\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
